--- a/templates/servers-list.html
+++ b/templates/servers-list.html
@@ -23,6 +23,8 @@
                                 <th>id</th>
                                 <th>Usuario</th>
                                 <th>Host</th>
+                                <th>Puerto</th>
+                                <th>Estado</th>
                                 <th class="actions">Acciones</th>
                             </tr>
                         </thead>
