--- a/templates/Index.html
+++ b/templates/Index.html
@@ -1,10 +1,9 @@
 [#partials/head.html]
     <div class="container-fluid landing" id="landing1">
         <div id="autor-foto">Photo by <a href="https://unsplash.com/@hisarahlee">Sarah Lee</a> on <a href="https://unsplash.com/photos/QURU8IY-RaI">Unsplash</a></div>
-        <div class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-8">
-                <div class="jumbotron align-middle">
+        <div class="row h-100 justify-content-md-center">
+            <div class="col-md-8 my-auto">
+                <div class="jumbotron">
                     <div class="row">
                         <div class="col-md-4">
                             <div class="text-center"><img class="img-fluid" src="/img/logo.png"/></div>
@@ -19,7 +18,6 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-2"></div>
-        </div>
+         </div>
     </div>
 [#partials/footer.html]
